[IEE-38] General improvements - Refined Fake DataSources - Refined Test Data - Created Tests for more cases - Converted assertions to Google Truth