@@ -3,9 +3,10 @@ package com.kastik.buildlogic.conventions.testing
 import com.kastik.buildlogic.conventions.extensions.libs
 import org.gradle.api.Plugin
 import org.gradle.api.Project
+import org.gradle.api.tasks.testing.Test
 import org.gradle.kotlin.dsl.dependencies
+import org.gradle.kotlin.dsl.withType
 
-//TODO Find a way to configure power assert here
 class AndroidLibraryTestingConventionPlugin : Plugin<Project> {
     override fun apply(project: Project) {
         with(project) {
@@ -17,7 +18,11 @@ class AndroidLibraryTestingConventionPlugin : Plugin<Project> {
                     add("testImplementation", libs.findLibrary("kotlinx-coroutines-test").get())
                     add("testImplementation", libs.findLibrary("androidx-junit").get())
                     add("testImplementation", libs.findLibrary("androidx-test-core").get())
+                    add("testImplementation", libs.findLibrary("google-truth").get())
                 }
+            }
+            tasks.withType<Test>().configureEach {
+                jvmArgs("-XX:+EnableDynamicAgentLoading")
             }
         }
     }
